--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project portfolio",
   "main": "script.js",
   "scripts": {
-    "sass": "sass -w ./assets/sass/main.scss:./assets/css/style.css"
+    "sass": "sass -w ./src/client/assets/sass/main.scss:./src/client/assets/css/style.css"
   },
   "repository": {
     "type": "git",
